Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -59,7 +59,7 @@
     <tbody>
         <tr>
         <td>22 3月 2016</td>
-        <td><a href='./first-blog.html'>HiroC Blog</a></td>
+        <td><a href='./2016-03-22-16-08.html'>HiroC's Blog</a></td>
         </tr>
     </tbody>
 </table>
@@ -111,6 +111,7 @@
 </div> <!-- /container -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script src="./theme/bootstrap-collapse.js"></script>
+<a href="http://github.conf/hir0C"><img style="position: absolute; top: 40px; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" alt="Fork me on GitHub" /></a>
  
 </body>
 </html>
