--- a/2016-03-22-16-08.html
+++ b/2016-03-22-16-08.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="utf-8">
-    <title>Hir0C blog - HiroC Blog</title>
+    <title>Hir0C blog - HiroC's Blog</title>
     <meta name="description" content="">
     <meta name="author" content="Hir0C">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -54,7 +54,7 @@
         <div class="span9">
     <div class='article'>
         <div class="content-title">
-            <h1>HiroC Blog</h1>
+            <h1>HiroC's Blog</h1>
 二 22 三月 2016
 
 by <a class="url fn" href="./author/hir0c.html">Hir0C</a>
@@ -63,7 +63,7 @@ by <a class="url fn" href="./author/hir0c.html">Hir0C</a>
 
         </div>
 	
-        <div><h3>试试</h3>
+        <div><h3>博客主题</h3>
 <p>This is the content of my blog.</p></div>
 	
         <hr>
@@ -115,6 +115,7 @@ by <a class="url fn" href="./author/hir0c.html">Hir0C</a>
 </div> <!-- /container -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script src="./theme/bootstrap-collapse.js"></script>
+<a href="http://github.conf/hir0C"><img style="position: absolute; top: 40px; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" alt="Fork me on GitHub" /></a>
  
 </body>
 </html>
