--- a/tags.html
+++ b/tags.html
@@ -53,7 +53,7 @@
 
         <div class="span9">
 <ul>
-    <li><a href="./tag/ce-shi.html">测试</a></li>
+    <li><a href="./tag/ri-chang.html">日常</a></li>
 </ul>
         </div>
         
@@ -101,6 +101,7 @@
 </div> <!-- /container -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script src="./theme/bootstrap-collapse.js"></script>
+<a href="http://github.conf/hir0C"><img style="position: absolute; top: 40px; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" alt="Fork me on GitHub" /></a>
  
 </body>
 </html>
