Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -92,7 +92,7 @@
                 Categories
                 </li>
                 
-                <li><a href="./category/ri-chang.html">日常</a></li>
+                <li><a href="./category/yun-wei.html">运维</a></li>
                    
             </ul>
             </div>
