--- a/categories.html
+++ b/categories.html
@@ -53,7 +53,7 @@
 
         <div class="span9">
 <ul>
-	<li><a href="./category/ri-chang.html">日常</li>
+	<li><a href="./category/yun-wei.html">运维</li>
 </ul>
 
         </div>
@@ -83,7 +83,7 @@
                 Categories
                 </li>
                 
-                <li><a href="./category/ri-chang.html">日常</a></li>
+                <li><a href="./category/yun-wei.html">运维</a></li>
                    
             </ul>
             </div>
