--- a/2016-03-22-16-12.html
+++ b/2016-03-22-16-12.html
@@ -91,34 +91,34 @@ db_load -T -t hash -f vftpusers.txt /mnt/vftpusers.db
 <li>
 <p>修改ftp配置(使用主动模式)
 <pre><code>
-    port_enable=YES
-    write_enable=YES
-    connect_from_port_20=YES
-    anonymous_enable=NO
-    local_enable=YES
-    local_umask=022
-    dirmessage_enable=YES
-    xferlog_enable=YES
-    connect_from_port_20=YES
-    xferlog_file=/var/log/vsftpd.log
-    xferlog_std_format=YES
-    ascii_upload_enable=YES
-    ascii_download_enable=YES
-    listen=YES
-    chroot_local_user=YES</p>
+port_enable=YES
+write_enable=YES
+connect_from_port_20=YES
+anonymous_enable=NO
+local_enable=YES
+local_umask=022
+dirmessage_enable=YES
+xferlog_enable=YES
+connect_from_port_20=YES
+xferlog_file=/var/log/vsftpd.log
+xferlog_std_format=YES
+ascii_upload_enable=YES
+ascii_download_enable=YES
+listen=YES
+chroot_local_user=YES</p>
+</li>
+</ol>
 <p>guest_enable=YES
 guest_username=vftpusers
 pam_service_name=vsftpd
 user_config_dir=vftpusers_conf
 virtual_use_local_privs=YES
 use_localtime=YES
- cmds_allowed=ABOR,CWD,LIST,MDTM,MKD,NLST,PASS,PASV,PORT,PWD,QUIT,RETR,RNFR,RNTO,SIZE,STOR,TYPE,USER,REST,CDUP,HELP,MODE,NOOP,REIN,STAT,STOU,STRU,SYST,FEAT
+cmds_allowed=ABOR,CWD,LIST,MDTM,MKD,NLST,PASS,PASV,PORT,PWD,QUIT,RETR,RNFR,RNTO,SIZE,STOR,TYPE,USER,REST,CDUP,HELP,MODE,NOOP,REIN,STAT,STOU,STRU,SYST,FEAT
 file_open_mode=0444
 </code></pre></p>
-</li>
-<li>
-<p>重启vsftpd，登陆验证。</p>
-</li>
+<ol>
+<li>重启vsftpd，登陆验证。</li>
 </ol></div>
 	
         <hr>
