Generate Pelican site

--- a/2016-03-22-16-12.html
+++ b/2016-03-22-16-12.html
@@ -105,10 +105,8 @@ xferlog_std_format=YES
 ascii_upload_enable=YES
 ascii_download_enable=YES
 listen=YES
-chroot_local_user=YES</p>
-</li>
-</ol>
-<p>guest_enable=YES
+chroot_local_user=YES
+guest_enable=YES
 guest_username=vftpusers
 pam_service_name=vsftpd
 user_config_dir=vftpusers_conf
@@ -117,8 +115,10 @@ use_localtime=YES
 cmds_allowed=ABOR,CWD,LIST,MDTM,MKD,NLST,PASS,PASV,PORT,PWD,QUIT,RETR,RNFR,RNTO,SIZE,STOR,TYPE,USER,REST,CDUP,HELP,MODE,NOOP,REIN,STAT,STOU,STRU,SYST,FEAT
 file_open_mode=0444
 </code></pre></p>
-<ol>
-<li>重启vsftpd，登陆验证。</li>
+</li>
+<li>
+<p>重启vsftpd，登陆验证。</p>
+</li>
 </ol></div>
 	
         <hr>
@@ -170,7 +170,7 @@ file_open_mode=0444
 </div> <!-- /container -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script src="./theme/bootstrap-collapse.js"></script>
-<a href="http://github.conf/hir0C"><img style="position: absolute; top: 40px; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" alt="Fork me on GitHub" /></a>
+<a href="http://github.com/hir0C"><img style="position: absolute; top: 40px; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" alt="Fork me on GitHub" /></a>
  
 </body>
 </html>
