Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -59,6 +59,10 @@
     <tbody>
         <tr>
         <td>22 3月 2016</td>
+        <td><a href='./2016-03-22-16-56.html'>HiroC's Blog</a></td>
+        </tr>
+        <tr>
+        <td>22 3月 2016</td>
         <td><a href='./2016-03-22-16-12.html'>vsftpd 虚拟用户配置</a></td>
         </tr>
     </tbody>
