--- a/tags.html
+++ b/tags.html
@@ -53,6 +53,8 @@
 
         <div class="span9">
 <ul>
+    <li><a href="./tag/bash.html">bash</a></li>
+    <li><a href="./tag/bian-ji-qi.html">编辑器</a></li>
     <li><a href="./tag/linux.html">linux</a></li>
     <li><a href="./tag/yun-wei.html">运维</a></li>
 </ul>
