Generate Pelican site

--- a/authors.html
+++ b/authors.html
@@ -83,7 +83,7 @@
                 Categories
                 </li>
                 
-                <li><a href="./category/yun-wei.html">运维</a></li>
+                <li><a href="./yun-wei/index.html">运维</a></li>
                    
             </ul>
             </div>
