--- a/archives.html
+++ b/archives.html
@@ -59,11 +59,11 @@
     <tbody>
         <tr>
         <td>22 3月 2016</td>
-        <td><a href='./2016-03-22-16-56.html'>HiroC's Blog</a></td>
+        <td><a href='./yun-wei/2016-03-22-16-56.html'>HiroC's Blog</a></td>
         </tr>
         <tr>
         <td>22 3月 2016</td>
-        <td><a href='./2016-03-22-16-12.html'>vsftpd 虚拟用户配置</a></td>
+        <td><a href='./yun-wei/2016-03-22-16-12.html'>vsftpd 虚拟用户配置</a></td>
         </tr>
     </tbody>
 </table>
@@ -96,7 +96,7 @@
                 Categories
                 </li>
                 
-                <li><a href="./category/yun-wei.html">运维</a></li>
+                <li><a href="./yun-wei/index.html">运维</a></li>
                    
             </ul>
             </div>
