Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -59,7 +59,7 @@
     <tbody>
         <tr>
         <td>22 3月 2016</td>
-        <td><a href='./yun-wei/2016-03-22-16-56.html'>HiroC's Blog</a></td>
+        <td><a href='./yun-wei/2016-03-22-16-56.html'>Zsh安装配置</a></td>
         </tr>
         <tr>
         <td>22 3月 2016</td>
