--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <div class='article'>
         <div class="content-title">
-            <a href="./yun-wei/2016-03-22-16-56.html"><h1>HiroC's Blog</h1></a>
+            <a href="./yun-wei/2016-03-22-16-56.html"><h1>Zsh安装配置</h1></a>
 二 22 三月 2016
 
 by <a class="url fn" href="./author/hir0c.html">Hir0C</a>
