--- a/yun-wei/2016-03-22-16-56.html
+++ b/yun-wei/2016-03-22-16-56.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="utf-8">
-    <title>Hir0C blog - HiroC's Blog</title>
+    <title>Hir0C blog - Zsh安装配置</title>
     <meta name="description" content="">
     <meta name="author" content="Hir0C">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -54,7 +54,7 @@
         <div class="span9">
     <div class='article'>
         <div class="content-title">
-            <h1>HiroC's Blog</h1>
+            <h1>Zsh安装配置</h1>
 二 22 三月 2016
 
 by <a class="url fn" href="../author/hir0c.html">Hir0C</a>
@@ -154,7 +154,7 @@ zshrc</p>
 <div id="disqus_thread"></div>
 <script type="text/javascript">
     var disqus_shortname = 'HiroC'; 
-    var disqus_title = 'HiroC's Blog';
+    var disqus_title = 'Zsh安装配置';
 
     (function() {
         var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
