Generate Pelican site

--- a/yun-wei/2016-03-22-16-56.html
+++ b/yun-wei/2016-03-22-16-56.html
@@ -129,7 +129,7 @@ zshrc</p>
 <p>强大的历史纪录功能，输入 grep 然后用上下箭头可以翻阅你执行的所有 grep 命令。</p>
 </li>
 <li>
-<p>智能拼写纠正，输入gtep mactalk # -R，系统会提示：zsh: correct ‘gtep’ to ‘grep’ [nyae]? 比妹纸贴心吧，她们向来都是让你猜的……</p>
+<p>智能拼写纠正，输入<code>gtep mactalk</code> # -R，系统会提示：<code>zsh: correct ‘gtep’ to ‘grep’ [nyae]?</code> 比妹纸贴心吧，她们向来都是让你猜的……</p>
 </li>
 <li>
 <p>各种补全：路径补全、命令补全，命令参数补全，插件内容补全等等。触发补全只需要按一下或两下 tab 键，补全项可以使用 ctrl+n/p/f/b上下左右切换。比如你想杀掉 java 的进程，只需要输入 kill java + tab键，如果只有一个 java 进程，zsh 会自动替换为进程的 pid，如果有多个则会出现选择项供你选择。ssh + 空格 + 两个tab键，zsh会列出所有访问过的主机和用户名进行补全</p>
@@ -141,7 +141,7 @@ zshrc</p>
 <p>目录浏览和跳转：输入 d，即可列出你在这个会话里访问的目录列表，输入列表前的序号，即可直接跳转。</p>
 </li>
 <li>
-<p>在当前目录下输入 .. 或 … ，或直接输入当前目录名都可以跳转，你甚至不再需要输入 cd 命令了。</p>
+<p>在当前目录下输入 <code>..</code> 或<code>…</code>，或直接输入当前目录名都可以跳转，你甚至不再需要输入 cd 命令了。</p>
 </li>
 <li>
 <p>通配符搜索：ls -l ##/#.sh，可以递归显示当前目录下的 shell 文件，文件少时可以代替 find，文件太多就歇菜了。</p>
