Generate Pelican site

--- a/categories.html
+++ b/categories.html
@@ -53,6 +53,7 @@
 
         <div class="span9">
 <ul>
+	<li><a href="./ri-chang/index.html">日常</li>
 	<li><a href="./yun-wei/index.html">运维</li>
 </ul>
 
@@ -83,6 +84,7 @@
                 Categories
                 </li>
                 
+                <li><a href="./ri-chang/index.html">日常</a></li>
                 <li><a href="./yun-wei/index.html">运维</a></li>
                    
             </ul>
