--- a/yun-wei/index.html
+++ b/yun-wei/index.html
@@ -243,6 +243,7 @@ write_enable ...</pre></div></li></ol> <a class="btn btn-info xsmall" href="../y
                 Categories
                 </li>
                 
+                <li><a href="../ri-chang/index.html">日常</a></li>
                 <li><a href="../yun-wei/index.html">运维</a></li>
                    
             </ul>
