--- a/archives.html
+++ b/archives.html
@@ -59,6 +59,10 @@
     <tbody>
         <tr>
         <td>22 3月 2016</td>
+        <td><a href='./ri-chang/2016-03-22-18-09.html'>storm 基本安装</a></td>
+        </tr>
+        <tr>
+        <td>22 3月 2016</td>
         <td><a href='./yun-wei/2016-03-22-16-56.html'>Zsh安装配置</a></td>
         </tr>
         <tr>
@@ -96,6 +100,7 @@
                 Categories
                 </li>
                 
+                <li><a href="./ri-chang/index.html">日常</a></li>
                 <li><a href="./yun-wei/index.html">运维</a></li>
                    
             </ul>
