--- a/yun-wei/2016-03-22-16-56.html
+++ b/yun-wei/2016-03-22-16-56.html
@@ -191,6 +191,7 @@ zshrc</p>
                 Categories
                 </li>
                 
+                <li><a href="../ri-chang/index.html">日常</a></li>
                 <li><a href="../yun-wei/index.html">运维</a></li>
                    
             </ul>
