Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -59,6 +59,10 @@
     <tbody>
         <tr>
         <td>22 3月 2016</td>
+        <td><a href='./yun-wei/2016-03-22-18-15.html'>VIM插件安装</a></td>
+        </tr>
+        <tr>
+        <td>22 3月 2016</td>
         <td><a href='./yun-wei/2016-03-22-18-09.html'>storm 基本安装</a></td>
         </tr>
         <tr>
