Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -59,6 +59,14 @@
     <tbody>
         <tr>
         <td>22 3月 2016</td>
+        <td><a href='./ri-chang/2016-03-22-18-30.html'>HiroC's Blog</a></td>
+        </tr>
+        <tr>
+        <td>22 3月 2016</td>
+        <td><a href='./yun-wei/2016-03-22-18-26.html'>sublime插件安装</a></td>
+        </tr>
+        <tr>
+        <td>22 3月 2016</td>
         <td><a href='./yun-wei/2016-03-22-18-15.html'>VIM插件安装</a></td>
         </tr>
         <tr>
@@ -104,6 +112,7 @@
                 Categories
                 </li>
                 
+                <li><a href="./ri-chang/index.html">日常</a></li>
                 <li><a href="./yun-wei/index.html">运维</a></li>
                    
             </ul>
