--- a/yun-wei/2016-03-22-18-09.html
+++ b/yun-wei/2016-03-22-18-09.html
@@ -183,6 +183,7 @@ ui.port: 8080
                 Categories
                 </li>
                 
+                <li><a href="../ri-chang/index.html">日常</a></li>
                 <li><a href="../yun-wei/index.html">运维</a></li>
                    
             </ul>
