Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -59,7 +59,7 @@
     <tbody>
         <tr>
         <td>22 3月 2016</td>
-        <td><a href='./ri-chang/2016-03-22-18-30.html'>HiroC's Blog</a></td>
+        <td><a href='./yun-wei/2016-03-22-18-34.html'>wordpress on nginx 搭建</a></td>
         </tr>
         <tr>
         <td>22 3月 2016</td>
@@ -112,7 +112,6 @@
                 Categories
                 </li>
                 
-                <li><a href="./ri-chang/index.html">日常</a></li>
                 <li><a href="./yun-wei/index.html">运维</a></li>
                    
             </ul>
