Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -51,6 +51,10 @@
 <table class="table table-striped">
     <tbody>
         <tr>
+        <td>23 3月 2016</td>
+        <td><a href='yun-wei/2016-03-23-12-36.html'>pip 本地源搭建</a></td>
+        </tr>
+        <tr>
         <td>22 3月 2016</td>
         <td><a href='yun-wei/2016-03-22-18-34.html'>wordpress on nginx 搭建</a></td>
         </tr>
