--- a/tags.html
+++ b/tags.html
@@ -47,6 +47,7 @@
         <div class="span10">
 <ul>
     <li><a href="./tag/bian-ji-qi.html">编辑器</li>
+    <li><a href="./tag/python.html">python</li>
     <li><a href="./tag/vsftpd.html">vsftpd</li>
     <li><a href="./tag/nginx.html">nginx</li>
     <li><a href="./tag/wordpress.html">wordpress</li>
