Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -52,6 +52,10 @@
     <tbody>
         <tr>
         <td>23 3月 2016</td>
+        <td><a href='yun-wei/2016-03-23-14-16.html'>mysql5.6使用老格式密码</a></td>
+        </tr>
+        <tr>
+        <td>23 3月 2016</td>
         <td><a href='yun-wei/2016-03-23-12-36.html'>pip 本地源搭建</a></td>
         </tr>
         <tr>
