--- a/tags.html
+++ b/tags.html
@@ -53,6 +53,7 @@
     <li><a href="./tag/wordpress.html">wordpress</li>
     <li><a href="./tag/yun-wei.html">运维</li>
     <li><a href="./tag/storm.html">storm</li>
+    <li><a href="./tag/mysql.html">mysql</li>
     <li><a href="./tag/bash.html">bash</li>
 </ul>
         </div>
