Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -33,6 +33,8 @@
       <div class="span3" id="blog-nav">
 	<ul class="nav nav-pills pull-right">
 	    <li >
+	      <a href="./ri-chang/index.html ">日常</a>
+	    <li >
 	      <a href="./yun-wei/index.html ">运维</a>
 	</ul>
       </div>
@@ -50,6 +52,10 @@
 
 <table class="table table-striped">
     <tbody>
+        <tr>
+        <td>23 3月 2016</td>
+        <td><a href='ri-chang/2016-03-23-14-20.html'>推理小说</a></td>
+        </tr>
         <tr>
         <td>23 3月 2016</td>
         <td><a href='yun-wei/2016-03-23-14-16.html'>mysql5.6使用老格式密码</a></td>
