--- a/authors.html
+++ b/authors.html
@@ -33,6 +33,8 @@
       <div class="span3" id="blog-nav">
 	<ul class="nav nav-pills pull-right">
 	    <li >
+	      <a href="./ri-chang/index.html ">日常</a>
+	    <li >
 	      <a href="./yun-wei/index.html ">运维</a>
 	</ul>
       </div>
@@ -47,7 +49,7 @@
         <div class="span10">
     <h1>Authors on Hir0C blog</h1>
 
-    <ul>        <li><a href="./author/hir0c.html">Hir0C</a> (8)</li>
+    <ul>        <li><a href="./author/hir0c.html">Hir0C</a> (9)</li>
     </ul>
         </div>
         
