--- a/tags.html
+++ b/tags.html
@@ -33,6 +33,8 @@
       <div class="span3" id="blog-nav">
 	<ul class="nav nav-pills pull-right">
 	    <li >
+	      <a href="./ri-chang/index.html ">日常</a>
+	    <li >
 	      <a href="./yun-wei/index.html ">运维</a>
 	</ul>
       </div>
@@ -48,6 +50,7 @@
 <ul>
     <li><a href="./tag/bian-ji-qi.html">编辑器</li>
     <li><a href="./tag/python.html">python</li>
+    <li><a href="./tag/xiao-shuo.html">小说</li>
     <li><a href="./tag/vsftpd.html">vsftpd</li>
     <li><a href="./tag/nginx.html">nginx</li>
     <li><a href="./tag/wordpress.html">wordpress</li>
