--- a/categories.html
+++ b/categories.html
@@ -33,6 +33,8 @@
       <div class="span3" id="blog-nav">
 	<ul class="nav nav-pills pull-right">
 	    <li >
+	      <a href="./ri-chang/index.html ">日常</a>
+	    <li >
 	      <a href="./yun-wei/index.html ">运维</a>
 	</ul>
       </div>
@@ -46,6 +48,7 @@
 
         <div class="span10">
 <ul>
+	<li><a href="./ri-chang/index.html">日常</li>
 	<li><a href="./yun-wei/index.html">运维</li>
 </ul>
 
