--- a/yun-wei/2016-03-23-12-36.html
+++ b/yun-wei/2016-03-23-12-36.html
@@ -32,6 +32,8 @@
 
       <div class="span3" id="blog-nav">
 	<ul class="nav nav-pills pull-right">
+	    <li >
+	      <a href="../ri-chang/index.html ">日常</a>
 	    <li  class="active" >
 	      <a href="../yun-wei/index.html ">运维</a>
 	</ul>
