Generate Pelican site

--- a/tags.html
+++ b/tags.html
@@ -57,6 +57,7 @@
     <li><a href="./tag/yun-wei.html">运维</li>
     <li><a href="./tag/storm.html">storm</li>
     <li><a href="./tag/mysql.html">mysql</li>
+    <li><a href="./tag/xi-ze-bao-yan.html">西泽保彦</li>
     <li><a href="./tag/bash.html">bash</li>
 </ul>
         </div>
