Generate Pelican site

--- a/ri-chang/2016-03-23-14-20.html
+++ b/ri-chang/2016-03-23-14-20.html
@@ -68,8 +68,9 @@ Filed under <a href="../ri-chang/index.html">日常</a>
       </div>
       
       <div class="span8">
-	<p>整理了一下最近看的推理小说，记录一下读后感。</p>
+	<p>整理了一下最近看的推理小说，来一发安利。</p>
 <p><em>无剧透</em>  </p>
+<p><img alt="解体诸因" src="http://img3.doubanio.com/lpic/s4304146.jpg" /></p>
 <p><strong><a href="http://book.douban.com/subject/4277347/" target="_blank">解体诸因</a></strong></p>
 <p>这也是我一直向身边朋友推荐的推理小说，西泽保彦出道作，匠千晓系列的第一篇，可以感觉到当时西泽保彦想通过这种冲击性的剧情引起读者兴趣。</p>
 <p>全篇由8个分尸案组成，看似不相关的案件，又在第九因(书中以因为章节)串联起来，并针对之前推理再次推理。</p>
