Generate Pelican site

--- a/yun-wei/2016-03-22-16-56.html
+++ b/yun-wei/2016-03-22-16-56.html
@@ -97,7 +97,7 @@ Filed under <a href="../yun-wei/index.html">运维</a>
 
 <h4>五、下载安装oh-my-zsh</h4>
 <ol>
-<li>github地址：https://github.com/robbyrussell/oh-my-zsh</li>
+<li><a href="https://github.com/robbyrussell/oh-my-zsh" target="_blank">github地址</a></li>
 <li>解压后 mv 到/root/目录下改名为.oh-my-zsh</li>
 <li>cp ~/.oh-my-zsh/templates/zshrc.zsh-template ~/.zshrc</li>
 <li>
