Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -54,6 +54,10 @@
     <tbody>
         <tr>
         <td>23 3月 2016</td>
+        <td><a href='ri-chang/2016-03-23-16-08.html'>推理小说-有栖川有栖</a></td>
+        </tr>
+        <tr>
+        <td>23 3月 2016</td>
         <td><a href='ri-chang/2016-03-23-14-20.html'>推理小说-西泽保彦</a></td>
         </tr>
         <tr>
