--- a/tags.html
+++ b/tags.html
@@ -50,15 +50,17 @@
 <ul>
     <li><a href="./tag/bian-ji-qi.html">编辑器</li>
     <li><a href="./tag/python.html">python</li>
-    <li><a href="./tag/xiao-shuo.html">小说</li>
+    <li><a href="./tag/xi-ze-bao-yan.html">西泽保彦</li>
     <li><a href="./tag/vsftpd.html">vsftpd</li>
     <li><a href="./tag/nginx.html">nginx</li>
+    <li><a href="./tag/you-qi-chuan-you-qi.html">有栖川有栖</li>
     <li><a href="./tag/wordpress.html">wordpress</li>
-    <li><a href="./tag/yun-wei.html">运维</li>
+    <li><a href="./tag/bash.html">bash</li>
     <li><a href="./tag/storm.html">storm</li>
     <li><a href="./tag/mysql.html">mysql</li>
-    <li><a href="./tag/xi-ze-bao-yan.html">西泽保彦</li>
-    <li><a href="./tag/bash.html">bash</li>
+    <li><a href="./tag/xiao-shuo.html">小说</li>
+    <li><a href="./tag/tui-li-xiao-shuo.html">推理小说</li>
+    <li><a href="./tag/yun-wei.html">运维</li>
 </ul>
         </div>
         
