Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -54,6 +54,10 @@
     <tbody>
         <tr>
         <td>23 3月 2016</td>
+        <td><a href='yun-wei/2016-03-23-17-06.html'>Gitolite+gitweb 源码搭建及迁移</a></td>
+        </tr>
+        <tr>
+        <td>23 3月 2016</td>
         <td><a href='yun-wei/2016-03-23-17-04.html'>linux screen 命令</a></td>
         </tr>
         <tr>
