--- a/tags.html
+++ b/tags.html
@@ -48,9 +48,10 @@
 
         <div class="span10">
 <ul>
+    <li><a href="./tag/git.html">git</li>
     <li><a href="./tag/bian-ji-qi.html">编辑器</li>
     <li><a href="./tag/python.html">python</li>
-    <li><a href="./tag/xi-ze-bao-yan.html">西泽保彦</li>
+    <li><a href="./tag/xiao-shuo.html">小说</li>
     <li><a href="./tag/mysql.html">mysql</li>
     <li><a href="./tag/vsftpd.html">vsftpd</li>
     <li><a href="./tag/nginx.html">nginx</li>
@@ -60,7 +61,7 @@
     <li><a href="./tag/storm.html">storm</li>
     <li><a href="./tag/linux.html">linux</li>
     <li><a href="./tag/wordpress.html">wordpress</li>
-    <li><a href="./tag/xiao-shuo.html">小说</li>
+    <li><a href="./tag/xi-ze-bao-yan.html">西泽保彦</li>
     <li><a href="./tag/tui-li-xiao-shuo.html">推理小说</li>
     <li><a href="./tag/yun-wei.html">运维</li>
 </ul>
