Generate Pelican site

--- a/tags.html
+++ b/tags.html
@@ -54,6 +54,7 @@
     <li><a href="./tag/xiao-shuo.html">小说</li>
     <li><a href="./tag/mysql.html">mysql</li>
     <li><a href="./tag/vsftpd.html">vsftpd</li>
+    <li><a href="./tag/kafka.html">kafka</li>
     <li><a href="./tag/nginx.html">nginx</li>
     <li><a href="./tag/you-qi-chuan-you-qi.html">有栖川有栖</li>
     <li><a href="./tag/command.html">command</li>
