Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -54,6 +54,10 @@
     <tbody>
         <tr>
         <td>23 3月 2016</td>
+        <td><a href='yun-wei/2016-03-23-17-37.html'>自建yum源服务group配置片段</a></td>
+        </tr>
+        <tr>
+        <td>23 3月 2016</td>
         <td><a href='yun-wei/2016-03-23-17-24.html'>KAFKA升级0.8.1</a></td>
         </tr>
         <tr>
