--- a/tags.html
+++ b/tags.html
@@ -48,6 +48,7 @@
 
         <div class="span10">
 <ul>
+    <li><a href="./tag/bash.html">bash</li>
     <li><a href="./tag/git.html">git</li>
     <li><a href="./tag/bian-ji-qi.html">编辑器</li>
     <li><a href="./tag/python.html">python</li>
@@ -57,11 +58,11 @@
     <li><a href="./tag/kafka.html">kafka</li>
     <li><a href="./tag/nginx.html">nginx</li>
     <li><a href="./tag/you-qi-chuan-you-qi.html">有栖川有栖</li>
-    <li><a href="./tag/command.html">command</li>
-    <li><a href="./tag/bash.html">bash</li>
+    <li><a href="./tag/yum.html">yum</li>
+    <li><a href="./tag/wordpress.html">wordpress</li>
     <li><a href="./tag/storm.html">storm</li>
     <li><a href="./tag/linux.html">linux</li>
-    <li><a href="./tag/wordpress.html">wordpress</li>
+    <li><a href="./tag/command.html">command</li>
     <li><a href="./tag/xi-ze-bao-yan.html">西泽保彦</li>
     <li><a href="./tag/tui-li-xiao-shuo.html">推理小说</li>
     <li><a href="./tag/yun-wei.html">运维</li>
