Generate Pelican site

--- a/tags.html
+++ b/tags.html
@@ -48,13 +48,14 @@
 
         <div class="span10">
 <ul>
-    <li><a href="./tag/bash.html">bash</li>
+    <li><a href="./tag/you-jian.html">邮件</li>
     <li><a href="./tag/git.html">git</li>
     <li><a href="./tag/bian-ji-qi.html">编辑器</li>
     <li><a href="./tag/python.html">python</li>
     <li><a href="./tag/xiao-shuo.html">小说</li>
     <li><a href="./tag/mysql.html">mysql</li>
     <li><a href="./tag/vsftpd.html">vsftpd</li>
+    <li><a href="./tag/bash.html">bash</li>
     <li><a href="./tag/kafka.html">kafka</li>
     <li><a href="./tag/nginx.html">nginx</li>
     <li><a href="./tag/you-qi-chuan-you-qi.html">有栖川有栖</li>
