--- a/archives.html
+++ b/archives.html
@@ -53,6 +53,10 @@
 <table class="table table-striped">
     <tbody>
         <tr>
+        <td>24 3月 2016</td>
+        <td><a href='yun-wei/2016-03-24-10-33.html'>内网使用sendmail转发邮件</a></td>
+        </tr>
+        <tr>
         <td>23 3月 2016</td>
         <td><a href='yun-wei/2016-03-23-17-37.html'>自建yum源服务group配置片段</a></td>
         </tr>
