--- a/archives.html
+++ b/archives.html
@@ -54,6 +54,10 @@
     <tbody>
         <tr>
         <td>24 3月 2016</td>
+        <td><a href='ri-chang/2016-03-24-10-39.html'>HiroC's Blog</a></td>
+        </tr>
+        <tr>
+        <td>24 3月 2016</td>
         <td><a href='yun-wei/2016-03-24-10-33.html'>内网使用sendmail转发邮件</a></td>
         </tr>
         <tr>
