Generate Pelican site

--- a/tags.html
+++ b/tags.html
@@ -50,14 +50,14 @@
 <ul>
     <li><a href="./tag/you-jian.html">邮件</li>
     <li><a href="./tag/git.html">git</li>
-    <li><a href="./tag/ri-chang.html">日常</li>
+    <li><a href="./tag/bian-ji-qi.html">编辑器</li>
     <li><a href="./tag/python.html">python</li>
     <li><a href="./tag/xiao-shuo.html">小说</li>
     <li><a href="./tag/mysql.html">mysql</li>
-    <li><a href="./tag/vsftpd.html">vsftpd</li>
-    <li><a href="./tag/bash.html">bash</li>
-    <li><a href="./tag/bian-ji-qi.html">编辑器</li>
+    <li><a href="./tag/cdh.html">CDH</li>
+    <li><a href="./tag/hadoop.html">hadoop</li>
     <li><a href="./tag/kafka.html">kafka</li>
+    <li><a href="./tag/vsftpd.html">vsftpd</li>
     <li><a href="./tag/nginx.html">nginx</li>
     <li><a href="./tag/you-qi-chuan-you-qi.html">有栖川有栖</li>
     <li><a href="./tag/yum.html">yum</li>
@@ -65,6 +65,7 @@
     <li><a href="./tag/storm.html">storm</li>
     <li><a href="./tag/linux.html">linux</li>
     <li><a href="./tag/command.html">command</li>
+    <li><a href="./tag/bash.html">bash</li>
     <li><a href="./tag/xi-ze-bao-yan.html">西泽保彦</li>
     <li><a href="./tag/tui-li-xiao-shuo.html">推理小说</li>
     <li><a href="./tag/yun-wei.html">运维</li>
