Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -70,7 +70,7 @@
         </tr>
         <tr>
         <td>23 3月 2016</td>
-        <td><a href='yun-wei/2016-03-23-17-24.html'>KAFKA升级0.8.1</a></td>
+        <td><a href='yun-wei/2016-03-23-17-24.html'>Apache Kafka 安装 升级 数据迁移</a></td>
         </tr>
         <tr>
         <td>23 3月 2016</td>
