--- a/archives.html
+++ b/archives.html
@@ -54,6 +54,10 @@
     <tbody>
         <tr>
         <td>24 3月 2016</td>
+        <td><a href='yun-wei/2016-03-24-14-28.html'>spark snappy 依赖</a></td>
+        </tr>
+        <tr>
+        <td>24 3月 2016</td>
         <td><a href='yun-wei/2016-03-24-11-48.html'>一些常用nginx配置</a></td>
         </tr>
         <tr>
