Generate Pelican site

--- a/tags.html
+++ b/tags.html
@@ -64,6 +64,7 @@
     <li><a href="./tag/xiao-shuo.html">小说</li>
     <li><a href="./tag/nginx.html">nginx</li>
     <li><a href="./tag/you-qi-chuan-you-qi.html">有栖川有栖</li>
+    <li><a href="./tag/ssh.html">ssh</li>
     <li><a href="./tag/spark.html">spark</li>
     <li><a href="./tag/bash.html">bash</li>
     <li><a href="./tag/bian-ji-qi.html">编辑器</li>
