--- a/archives.html
+++ b/archives.html
@@ -54,6 +54,10 @@
     <tbody>
         <tr>
         <td>24 3月 2016</td>
+        <td><a href='yun-wei/2016-03-24-14-52.html'>Flume windows 平台部署</a></td>
+        </tr>
+        <tr>
+        <td>24 3月 2016</td>
         <td><a href='yun-wei/2016-03-24-14-40.html'>OpenSSH 连接复用</a></td>
         </tr>
         <tr>
