--- a/tags.html
+++ b/tags.html
@@ -48,6 +48,7 @@
 
         <div class="span10">
 <ul>
+    <li><a href="./tag/you-jian.html">邮件</li>
     <li><a href="./tag/linux.html">linux</li>
     <li><a href="./tag/cdh.html">CDH</li>
     <li><a href="./tag/kafka.html">kafka</li>
@@ -59,7 +60,7 @@
     <li><a href="./tag/storm.html">storm</li>
     <li><a href="./tag/command.html">command</li>
     <li><a href="./tag/xi-ze-bao-yan.html">西泽保彦</li>
-    <li><a href="./tag/you-jian.html">邮件</li>
+    <li><a href="./tag/flume.html">Flume</li>
     <li><a href="./tag/python.html">python</li>
     <li><a href="./tag/xiao-shuo.html">小说</li>
     <li><a href="./tag/nginx.html">nginx</li>
