Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -54,6 +54,14 @@
     <tbody>
         <tr>
         <td>24 3月 2016</td>
+        <td><a href='ri-chang/2016-03-24-15-08.html'>HiroC's Blog</a></td>
+        </tr>
+        <tr>
+        <td>24 3月 2016</td>
+        <td><a href='yun-wei/2016-03-24-15-04.html'>rpm包制作遇到的一个小问题</a></td>
+        </tr>
+        <tr>
+        <td>24 3月 2016</td>
         <td><a href='yun-wei/2016-03-24-14-52.html'>Flume windows 平台部署</a></td>
         </tr>
         <tr>
