--- a/tags.html
+++ b/tags.html
@@ -54,6 +54,7 @@
     <li><a href="./tag/kafka.html">kafka</li>
     <li><a href="./tag/vsftpd.html">vsftpd</li>
     <li><a href="./tag/mysql.html">mysql</li>
+    <li><a href="./tag/rpm.html">rpm</li>
     <li><a href="./tag/git.html">git</li>
     <li><a href="./tag/hadoop.html">hadoop</li>
     <li><a href="./tag/wordpress.html">wordpress</li>
@@ -68,6 +69,7 @@
     <li><a href="./tag/ssh.html">ssh</li>
     <li><a href="./tag/spark.html">spark</li>
     <li><a href="./tag/bash.html">bash</li>
+    <li><a href="./tag/ri-chang.html">日常</li>
     <li><a href="./tag/bian-ji-qi.html">编辑器</li>
     <li><a href="./tag/yum.html">yum</li>
     <li><a href="./tag/yun-wei.html">运维</li>
