--- a/archives.html
+++ b/archives.html
@@ -54,7 +54,7 @@
     <tbody>
         <tr>
         <td>24 3月 2016</td>
-        <td><a href='ri-chang/2016-03-24-15-08.html'>HiroC's Blog</a></td>
+        <td><a href='yun-wei/2016-03-24-15-08.html'>Saltstack基本安装使用</a></td>
         </tr>
         <tr>
         <td>24 3月 2016</td>
