--- a/tags.html
+++ b/tags.html
@@ -61,7 +61,7 @@
     <li><a href="./tag/storm.html">storm</li>
     <li><a href="./tag/yum.html">yum</li>
     <li><a href="./tag/xi-ze-bao-yan.html">西泽保彦</li>
-    <li><a href="./tag/flume.html">Flume</li>
+    <li><a href="./tag/flume.html">flume</li>
     <li><a href="./tag/python.html">python</li>
     <li><a href="./tag/xiao-shuo.html">小说</li>
     <li><a href="./tag/nginx.html">nginx</li>
