--- a/yun-wei/2016-03-24-15-08.html
+++ b/yun-wei/2016-03-24-15-08.html
@@ -68,8 +68,7 @@ Filed under <a href="../yun-wei/index.html">运维</a>
       </div>
       
       <div class="span8">
-	<p>{:target="_blank"} </p>
-<h4>一、先转几个入门学习链接慢慢看</h4>
+	<h4>一、先转几个入门学习链接慢慢看</h4>
 <ol>
 <li>
 <p>作者这个系列的<a href="http://www.ituring.com.cn/article/41632" target="_blank">blog</a> 是翻译官网的文档，写的很清楚</p>
@@ -122,7 +121,7 @@ Filed under <a href="../yun-wei/index.html">运维</a>
 <p>不支持目录</p>
 <h4>四、使用中发现的问题</h4>
 <ol>
-<li>当文件名包含'<em>'的时候，无法通过内置模块查找到备份文件，因为方法中用'</em>'做的split，只能指定文件名的方式查找到备份文件。</li>
+<li>当文件名包含"<em>"的时候，无法通过内置模块查找到备份文件，因为方法中用"</em>"做的split，只能指定文件名的方式查找到备份文件。</li>
 </ol>
 	<hr />
       </div>
