--- a/tags.html
+++ b/tags.html
@@ -56,10 +56,11 @@
     <li><a href="./tag/mysql.html">mysql</li>
     <li><a href="./tag/rpm.html">rpm</li>
     <li><a href="./tag/git.html">git</li>
+    <li><a href="./tag/redis.html">redis</li>
     <li><a href="./tag/hadoop.html">hadoop</li>
     <li><a href="./tag/wordpress.html">wordpress</li>
     <li><a href="./tag/storm.html">storm</li>
-    <li><a href="./tag/yum.html">yum</li>
+    <li><a href="./tag/command.html">command</li>
     <li><a href="./tag/xi-ze-bao-yan.html">西泽保彦</li>
     <li><a href="./tag/flume.html">flume</li>
     <li><a href="./tag/python.html">python</li>
@@ -70,7 +71,7 @@
     <li><a href="./tag/spark.html">spark</li>
     <li><a href="./tag/bash.html">bash</li>
     <li><a href="./tag/bian-ji-qi.html">编辑器</li>
-    <li><a href="./tag/command.html">command</li>
+    <li><a href="./tag/yum.html">yum</li>
     <li><a href="./tag/yun-wei.html">运维</li>
     <li><a href="./tag/saltstack.html">saltstack</li>
     <li><a href="./tag/tui-li-xiao-shuo.html">推理小说</li>
