--- a/tags.html
+++ b/tags.html
@@ -51,6 +51,7 @@
     <li><a href="./tag/you-jian.html">邮件</li>
     <li><a href="./tag/linux.html">linux</li>
     <li><a href="./tag/cdh.html">CDH</li>
+    <li><a href="./tag/command.html">command</li>
     <li><a href="./tag/kafka.html">kafka</li>
     <li><a href="./tag/vsftpd.html">vsftpd</li>
     <li><a href="./tag/mysql.html">mysql</li>
@@ -60,7 +61,7 @@
     <li><a href="./tag/hadoop.html">hadoop</li>
     <li><a href="./tag/wordpress.html">wordpress</li>
     <li><a href="./tag/storm.html">storm</li>
-    <li><a href="./tag/command.html">command</li>
+    <li><a href="./tag/jenkins.html">jenkins</li>
     <li><a href="./tag/xi-ze-bao-yan.html">西泽保彦</li>
     <li><a href="./tag/flume.html">flume</li>
     <li><a href="./tag/python.html">python</li>
