Generate Pelican site

--- a/index.html
+++ b/index.html
@@ -88,16 +88,14 @@ Filed under <a href="./yun-wei/index.html">运维</a>
 <li>
 <p>Global roles 设置账号权限组。   </p>
 </li>
-<li>
-<p>Project roles 设置账号对项目的权限组。 <br />
-  下面是我的配置：
-  <img alt="配置图1" src="http://static.oschina.net/uploads/space/2015/1023/143042_j6yU_1428530.jpg" />
-  说明：global roles 设置了一个只读组，防止登陆用户修改系统配置。
-  project roles 设置了一个dev组，研发同学只能对dev-project*开头的项目可见，并可以自己部署。</p>
-</li>
-<li>
-<p>系统管理 -&gt; Manage and Assign Roles -&gt; Assign Roles （这里就是把你的账号分入对应的组里。）</p>
-</li>
+<li>Project roles 设置账号对项目的权限组。 <br />
+  下面是我的配置：    </li>
+</ol>
+<p><img alt="配置图1" src="http://static.oschina.net/uploads/space/2015/1023/143042_j6yU_1428530.jpg" />   </p>
+<p><strong>说明：<code>global roles</code> 设置了一个只读组，防止登陆用户修改系统配置。</strong>
+  <strong><code>project roles</code> 设置了一个dev组，研发同学只能对<code>dev-project</code>开头的项目可见，并可以自己部署。</strong></p>
+<ol>
+<li>系统管理 -&gt; Manage and Assign Roles -&gt; Assign Roles （这里就是把你的账号分入对应的组里。）</li>
 </ol>
 <p>题外话，使用qq邮箱发送邮件需要提前做一些小配置，设置-&gt;账户-&gt;POP3/SMTP服务-&gt;开启-&gt;设置独立密码。</p> 
 	<a class="btn btn-mini xsmall" href="./yun-wei/2016-03-24-15-46.html">
