--- a/archives.html
+++ b/archives.html
@@ -54,6 +54,10 @@
     <tbody>
         <tr>
         <td>24 3月 2016</td>
+        <td><a href='yun-wei/2016-03-24-15-58.html'>hadoop安装 升级</a></td>
+        </tr>
+        <tr>
+        <td>24 3月 2016</td>
         <td><a href='yun-wei/2016-03-24-15-46.html'>jenkins权限管理</a></td>
         </tr>
         <tr>
