--- a/archives.html
+++ b/archives.html
@@ -86,7 +86,7 @@
         </tr>
         <tr>
         <td>24 3月 2016</td>
-        <td><a href='yun-wei/2016-03-24-14-28.html'>spark snappy 依赖</a></td>
+        <td><a href='yun-wei/2016-03-24-14-28.html'>spark 安装 配置</a></td>
         </tr>
         <tr>
         <td>24 3月 2016</td>
