--- a/archives.html
+++ b/archives.html
@@ -54,7 +54,11 @@
     <tbody>
         <tr>
         <td>24 3月 2016</td>
-        <td><a href='ri-chang/2016-03-24-16-36.html'>特殊操作符号学习</a></td>
+        <td><a href='yun-wei/2016-03-24-16-40.html'>发送邮件Http api</a></td>
+        </tr>
+        <tr>
+        <td>24 3月 2016</td>
+        <td><a href='ri-chang/2016-03-24-16-36.html'>python使用中遇到的一些问题</a></td>
         </tr>
         <tr>
         <td>24 3月 2016</td>
