Generate Pelican site

--- a/tags.html
+++ b/tags.html
@@ -54,6 +54,7 @@
     <li><a href="./tag/command.html">command</li>
     <li><a href="./tag/kafka.html">kafka</li>
     <li><a href="./tag/vsftpd.html">vsftpd</li>
+    <li><a href="./tag/ansible.html">ansible</li>
     <li><a href="./tag/linux.html">linux</li>
     <li><a href="./tag/rpm.html">rpm</li>
     <li><a href="./tag/git.html">git</li>
