Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -54,6 +54,10 @@
     <tbody>
         <tr>
         <td>24 3月 2016</td>
+        <td><a href='yun-wei/2016-03-24-17-02.html'>HiroC's maven 命令备忘</a></td>
+        </tr>
+        <tr>
+        <td>24 3月 2016</td>
         <td><a href='yun-wei/2016-03-24-16-58.html'>Ansible 基本安装 配置</a></td>
         </tr>
         <tr>
