--- a/tags.html
+++ b/tags.html
@@ -67,6 +67,7 @@
     <li><a href="./tag/flume.html">flume</li>
     <li><a href="./tag/python.html">python</li>
     <li><a href="./tag/xiao-shuo.html">小说</li>
+    <li><a href="./tag/maven.html">maven</li>
     <li><a href="./tag/nginx.html">nginx</li>
     <li><a href="./tag/you-qi-chuan-you-qi.html">有栖川有栖</li>
     <li><a href="./tag/ssh.html">ssh</li>
