Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -54,7 +54,11 @@
     <tbody>
         <tr>
         <td>24 3月 2016</td>
-        <td><a href='yun-wei/2016-03-24-17-02.html'>HiroC's maven 命令备忘</a></td>
+        <td><a href='yun-wei/2016-03-24-17-06.html'>mysql mongodb 备份脚本</a></td>
+        </tr>
+        <tr>
+        <td>24 3月 2016</td>
+        <td><a href='yun-wei/2016-03-24-17-02.html'>maven 命令备忘</a></td>
         </tr>
         <tr>
         <td>24 3月 2016</td>
