--- a/tags.html
+++ b/tags.html
@@ -49,13 +49,13 @@
         <div class="span10">
 <ul>
     <li><a href="./tag/you-jian.html">邮件</li>
-    <li><a href="./tag/mysql.html">mysql</li>
+    <li><a href="./tag/linux.html">linux</li>
     <li><a href="./tag/cdh.html">CDH</li>
     <li><a href="./tag/command.html">command</li>
     <li><a href="./tag/kafka.html">kafka</li>
     <li><a href="./tag/vsftpd.html">vsftpd</li>
     <li><a href="./tag/ansible.html">ansible</li>
-    <li><a href="./tag/linux.html">linux</li>
+    <li><a href="./tag/mysql.html">mysql</li>
     <li><a href="./tag/rpm.html">rpm</li>
     <li><a href="./tag/git.html">git</li>
     <li><a href="./tag/redis.html">redis</li>
@@ -66,6 +66,7 @@
     <li><a href="./tag/xi-ze-bao-yan.html">西泽保彦</li>
     <li><a href="./tag/flume.html">flume</li>
     <li><a href="./tag/python.html">python</li>
+    <li><a href="./tag/mongodb.html">mongodb</li>
     <li><a href="./tag/xiao-shuo.html">小说</li>
     <li><a href="./tag/maven.html">maven</li>
     <li><a href="./tag/nginx.html">nginx</li>
