--- a/archives.html
+++ b/archives.html
@@ -54,6 +54,10 @@
     <tbody>
         <tr>
         <td>24 3月 2016</td>
+        <td><a href='yun-wei/2016-03-24-17-12.html'>Postfix 删除邮件队列</a></td>
+        </tr>
+        <tr>
+        <td>24 3月 2016</td>
         <td><a href='yun-wei/2016-03-24-17-06.html'>mysql mongodb 备份脚本</a></td>
         </tr>
         <tr>
