--- a/archives.html
+++ b/archives.html
@@ -53,6 +53,14 @@
 <table class="table table-striped">
     <tbody>
         <tr>
+        <td>25 3月 2016</td>
+        <td><a href='yun-wei/2016-03-25-10-48.html'>elk安装 配置</a></td>
+        </tr>
+        <tr>
+        <td>25 3月 2016</td>
+        <td><a href='ri-chang/2016-03-25-10-41.html'>windows10 清空DNS缓存</a></td>
+        </tr>
+        <tr>
         <td>24 3月 2016</td>
         <td><a href='yun-wei/2016-03-24-17-12.html'>Postfix 删除邮件队列</a></td>
         </tr>
