--- a/tags.html
+++ b/tags.html
@@ -49,21 +49,24 @@
         <div class="span10">
 <ul>
     <li><a href="./tag/you-jian.html">邮件</li>
-    <li><a href="./tag/linux.html">linux</li>
+    <li><a href="./tag/mysql.html">mysql</li>
     <li><a href="./tag/cdh.html">CDH</li>
     <li><a href="./tag/command.html">command</li>
+    <li><a href="./tag/kibana.html">kibana</li>
     <li><a href="./tag/kafka.html">kafka</li>
     <li><a href="./tag/vsftpd.html">vsftpd</li>
     <li><a href="./tag/ansible.html">ansible</li>
-    <li><a href="./tag/mysql.html">mysql</li>
+    <li><a href="./tag/linux.html">linux</li>
     <li><a href="./tag/rpm.html">rpm</li>
+    <li><a href="./tag/elk.html">elk</li>
     <li><a href="./tag/git.html">git</li>
     <li><a href="./tag/redis.html">redis</li>
     <li><a href="./tag/hadoop.html">hadoop</li>
     <li><a href="./tag/wordpress.html">wordpress</li>
     <li><a href="./tag/storm.html">storm</li>
-    <li><a href="./tag/jenkins.html">jenkins</li>
+    <li><a href="./tag/mail.html">mail</li>
     <li><a href="./tag/xi-ze-bao-yan.html">西泽保彦</li>
+    <li><a href="./tag/yun-wei.html">运维</li>
     <li><a href="./tag/flume.html">flume</li>
     <li><a href="./tag/python.html">python</li>
     <li><a href="./tag/mongodb.html">mongodb</li>
@@ -72,12 +75,14 @@
     <li><a href="./tag/nginx.html">nginx</li>
     <li><a href="./tag/you-qi-chuan-you-qi.html">有栖川有栖</li>
     <li><a href="./tag/ssh.html">ssh</li>
-    <li><a href="./tag/mail.html">mail</li>
+    <li><a href="./tag/jenkins.html">jenkins</li>
     <li><a href="./tag/spark.html">spark</li>
+    <li><a href="./tag/logstash.html">logstash</li>
     <li><a href="./tag/bash.html">bash</li>
+    <li><a href="./tag/windows.html">windows</li>
     <li><a href="./tag/bian-ji-qi.html">编辑器</li>
+    <li><a href="./tag/elasticsearch.html">elasticsearch</li>
     <li><a href="./tag/yum.html">yum</li>
-    <li><a href="./tag/yun-wei.html">运维</li>
     <li><a href="./tag/saltstack.html">saltstack</li>
     <li><a href="./tag/tui-li-xiao-shuo.html">推理小说</li>
 </ul>
