Generate Pelican site

--- a/tags.html
+++ b/tags.html
@@ -77,6 +77,7 @@
     <li><a href="./tag/ssh.html">ssh</li>
     <li><a href="./tag/jenkins.html">jenkins</li>
     <li><a href="./tag/spark.html">spark</li>
+    <li><a href="./tag/vpn.html">vpn</li>
     <li><a href="./tag/logstash.html">logstash</li>
     <li><a href="./tag/bash.html">bash</li>
     <li><a href="./tag/windows.html">windows</li>
