Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -54,6 +54,10 @@
     <tbody>
         <tr>
         <td>25 3月 2016</td>
+        <td><a href='yun-wei/2016-03-25-11-12.html'>tcpcopy 1.0 安装使用</a></td>
+        </tr>
+        <tr>
+        <td>25 3月 2016</td>
         <td><a href='yun-wei/2016-03-25-11-06.html'>vpn搭建</a></td>
         </tr>
         <tr>
