--- a/tags.html
+++ b/tags.html
@@ -80,10 +80,11 @@
     <li><a href="./tag/vpn.html">vpn</li>
     <li><a href="./tag/logstash.html">logstash</li>
     <li><a href="./tag/bash.html">bash</li>
+    <li><a href="./tag/yum.html">yum</li>
     <li><a href="./tag/windows.html">windows</li>
     <li><a href="./tag/bian-ji-qi.html">编辑器</li>
     <li><a href="./tag/elasticsearch.html">elasticsearch</li>
-    <li><a href="./tag/yum.html">yum</li>
+    <li><a href="./tag/tcpcopy.html">tcpcopy</li>
     <li><a href="./tag/saltstack.html">saltstack</li>
     <li><a href="./tag/tui-li-xiao-shuo.html">推理小说</li>
 </ul>
