Generate Pelican site

--- a/tags.html
+++ b/tags.html
@@ -83,6 +83,7 @@
     <li><a href="./tag/yum.html">yum</li>
     <li><a href="./tag/windows.html">windows</li>
     <li><a href="./tag/bian-ji-qi.html">编辑器</li>
+    <li><a href="./tag/zabbix.html">zabbix</li>
     <li><a href="./tag/elasticsearch.html">elasticsearch</li>
     <li><a href="./tag/tcpcopy.html">tcpcopy</li>
     <li><a href="./tag/saltstack.html">saltstack</li>
