--- a/tags.html
+++ b/tags.html
@@ -81,6 +81,7 @@
     <li><a href="./tag/logstash.html">logstash</li>
     <li><a href="./tag/bash.html">bash</li>
     <li><a href="./tag/yum.html">yum</li>
+    <li><a href="./tag/ri-chang.html">日常</li>
     <li><a href="./tag/windows.html">windows</li>
     <li><a href="./tag/bian-ji-qi.html">编辑器</li>
     <li><a href="./tag/zabbix.html">zabbix</li>
