Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -54,6 +54,10 @@
     <tbody>
         <tr>
         <td>25 3月 2016</td>
+        <td><a href='yun-wei/2016-03-25-12-10.html'>安装火焰图生成工具</a></td>
+        </tr>
+        <tr>
+        <td>25 3月 2016</td>
         <td><a href='yun-wei/2016-03-25-11-37.html'>nginx 使用免费https</a></td>
         </tr>
         <tr>
