--- a/tags.html
+++ b/tags.html
@@ -87,6 +87,7 @@
     <li><a href="./tag/zabbix.html">zabbix</li>
     <li><a href="./tag/elasticsearch.html">elasticsearch</li>
     <li><a href="./tag/tcpcopy.html">tcpcopy</li>
+    <li><a href="./tag/openresty.html">openresty</li>
     <li><a href="./tag/saltstack.html">saltstack</li>
     <li><a href="./tag/tui-li-xiao-shuo.html">推理小说</li>
 </ul>
