Generate Pelican site

--- a/tags.html
+++ b/tags.html
@@ -49,6 +49,7 @@
         <div class="span10">
 <ul>
     <li><a href="./tag/you-jian.html">邮件</li>
+    <li><a href="./tag/markdown.html">markdown</li>
     <li><a href="./tag/mysql.html">mysql</li>
     <li><a href="./tag/cdh.html">CDH</li>
     <li><a href="./tag/command.html">command</li>
