Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -53,6 +53,10 @@
 <table class="table table-striped">
     <tbody>
         <tr>
+        <td>27 4月 2016</td>
+        <td><a href='yun-wei/2016-04-27-13-45.html'>360-Atlas安装、测试</a></td>
+        </tr>
+        <tr>
         <td>22 4月 2016</td>
         <td><a href='yun-wei/2016-04-22-11-19.html'>MySQL AB复制学习</a></td>
         </tr>
