--- a/tags.html
+++ b/tags.html
@@ -63,13 +63,14 @@
     <li><a href="./tag/git.html">git</li>
     <li><a href="./tag/redis.html">redis</li>
     <li><a href="./tag/hadoop.html">hadoop</li>
+    <li><a href="./tag/python.html">python</li>
     <li><a href="./tag/wordpress.html">wordpress</li>
     <li><a href="./tag/storm.html">storm</li>
     <li><a href="./tag/mail.html">mail</li>
     <li><a href="./tag/xi-ze-bao-yan.html">西泽保彦</li>
     <li><a href="./tag/yun-wei.html">运维</li>
     <li><a href="./tag/flume.html">flume</li>
-    <li><a href="./tag/python.html">python</li>
+    <li><a href="./tag/shu-ju-ku.html">数据库</li>
     <li><a href="./tag/mongodb.html">mongodb</li>
     <li><a href="./tag/xiao-shuo.html">小说</li>
     <li><a href="./tag/maven.html">maven</li>
