Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -53,6 +53,14 @@
 <table class="table table-striped">
     <tbody>
         <tr>
+        <td>12 6月 2016</td>
+        <td><a href='yun-wei/2016-06-12-14-23.html'>配置nginx支持mp4视频播放</a></td>
+        </tr>
+        <tr>
+        <td>03 5月 2016</td>
+        <td><a href='yun-wei/2016-05-03-10-43.html'>HiroC's Blog</a></td>
+        </tr>
+        <tr>
         <td>27 4月 2016</td>
         <td><a href='yun-wei/2016-04-27-13-45.html'>360-Atlas安装、测试</a></td>
         </tr>
