--- a/yun-wei/2016-03-25-11-37.html
+++ b/yun-wei/2016-03-25-11-37.html
@@ -62,7 +62,7 @@ Filed under <a href="../yun-wei/index.html">运维</a>
 </p>
 <p style="text-align: left;">
  
-    Tags <a href="../tag/ri-chang.html">日常</a> </p>
+    Tags <a href="../tag/nginx.html">nginx</a> </p>
 <p>
 </p>
       </div>
