Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -53,6 +53,10 @@
 <table class="table table-striped">
     <tbody>
         <tr>
+        <td>29 6月 2016</td>
+        <td><a href='ri-chang/2016-06-29-10-18.html'>HiroC's Blog</a></td>
+        </tr>
+        <tr>
         <td>12 6月 2016</td>
         <td><a href='yun-wei/2016-06-12-14-23.html'>配置nginx支持mp4视频播放</a></td>
         </tr>
