--- a/ri-chang/2016-03-23-14-20.html
+++ b/ri-chang/2016-03-23-14-20.html
@@ -71,8 +71,8 @@ Filed under <a href="../ri-chang/index.html">日常</a>
 	<p>整理了一下最近看的推理小说，来一发安利。</p>
 <p><em>无剧透</em>  </p>
 <p><img alt="解体诸因" src="http://img3.doubanio.com/lpic/s4304146.jpg" /></p>
-<h4>西泽保彦</h4>
-<p>西澤 保彦(にしざわ やすひこ、1960年12月25日[1] - )
+<h4 id="_1">西泽保彦</h4>
+<p>西澤 保彦(にしざわ やすひこ、1960年12月25日[1] - )<br />
 日本小説家、推理作家、SF作家。高知県出生。高知県高知市在住。高知県立安芸高等学校、米国私立エカード大学（Eckerd College）創作法専修卒業。</p>
 <p><strong><a href="http://book.douban.com/subject/4277347/" target="_blank">解体诸因</a></strong></p>
 <p>这也是我一直向身边朋友推荐的推理小说，西泽保彦出道作，匠千晓系列的第一篇，可以感觉到当时西泽保彦想通过这种冲击性的剧情引起读者兴趣。</p>
@@ -86,7 +86,7 @@ Filed under <a href="../ri-chang/index.html">日常</a>
 <p>安乐椅侦探（Armchair Detectives）是侦探小说所塑造的一种侦探。与一般的侦探之间，最大的差异是安乐椅神探无须奔波劳碌，只需坐在舒适的安乐椅，听、看着命案的线索，就能凭借著推理，指出真凶。推理小说史上的第一个安乐椅神探是由奥希兹女男爵的小说《角落里的老人》里的主角。自从这个部作品出版后，安乐椅神探变成所有推理小说作家想要挑战的角色。</p>
 </blockquote>
 <p>匠千晓全系列都属于"安乐椅侦探"类型，每个案件都是在极少的线索下主角和朋友的讨论中，不断推理，推翻，再推理，再推翻解决的。如果大家喜欢这种类型的作品，又偏安日系推理小说，匠千晓系列绝对是你的首选。</p>
-<h3>最后</h3>
+<h3 id="_2">最后</h3>
 <p>西泽保彦在《解体诸因》后记推荐了几本分尸推理小说，《红色密室》、《白色森林的幽灵杀人》、《拜拜，天使》，最为推荐的乔伊斯·波特的《切断》。</p>
 	<hr />
       </div>
