--- a/yun-wei/2016-03-24-15-04.html
+++ b/yun-wei/2016-03-24-15-04.html
@@ -68,7 +68,7 @@ Filed under <a href="../yun-wei/index.html">运维</a>
       </div>
       
       <div class="span8">
-	<p>最近rhel6上做rpm遇到一个问题，之前在rhel5上从来没有遇到过。如图：<br />
+	<p>最近rhel6上做rpm遇到一个问题，之前在rhel5上从来没有遇到过。如图：
 <img alt="rpm报错图" src="http://static.oschina.net/uploads/space/2015/0105/015731_Wny3_1428530.png" /></p>
 <p>而且出现这个报错只是在做个别包的时候会有，网上大概查了一下报错也没有啥明确的说法。不过报错的提示倒是很明显，根据你的报错赋值对应的bitmask   </p>
 <p>比如我这回遇到的是<code>invalid RPATHs</code>，所以我打包时就要执行如下命令：   </p>
