Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -53,6 +53,10 @@
 <table class="table table-striped">
     <tbody>
         <tr>
+        <td>05 7月 2016</td>
+        <td><a href='yun-wei/2016-07-05-14-59.html'>Nginx + Django 部署</a></td>
+        </tr>
+        <tr>
         <td>12 6月 2016</td>
         <td><a href='yun-wei/2016-06-12-14-23.html'>配置nginx支持mp4视频播放</a></td>
         </tr>
