Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -53,6 +53,10 @@
 <table class="table table-striped">
     <tbody>
         <tr>
+        <td>07 7月 2016</td>
+        <td><a href='yun-wei/2016-07-07-10-51.html'>Hadoop 端口占用报错</a></td>
+        </tr>
+        <tr>
         <td>05 7月 2016</td>
         <td><a href='yun-wei/2016-07-05-14-59.html'>Nginx + Django 部署</a></td>
         </tr>
