--- a/archives.html
+++ b/archives.html
@@ -53,6 +53,10 @@
 <table class="table table-striped">
     <tbody>
         <tr>
+        <td>22 9月 2016</td>
+        <td><a href='yun-wei/2016-09-22-17-50.html'>Ansible 2.0 Api 例子</a></td>
+        </tr>
+        <tr>
         <td>20 9月 2016</td>
         <td><a href='yun-wei/2016-09-20-11-06.html'>Django 1.10 一些变化</a></td>
         </tr>
