--- a/yun-wei/2016-09-22-17-50.html
+++ b/yun-wei/2016-09-22-17-50.html
@@ -224,10 +224,12 @@ Filed under <a href="../yun-wei/index.html">运维</a>
 
 <p><em>使用api的时候还有一个小问题，运行报错如下</em>   </p>
 <p>FAILED! =&gt; {"failed": true, "msg": "using -c ssh on certain older ssh versions may not support ControlPersist, set ANSIBLE_SSH_ARGS=\"\" (or ssh_args in [ssh_connection] section of the config file) before running again"}   </p>
-<p>需要在<code>ansible.cfg</code>配置文件中添加一行配置： <br />
-    [ssh_connection]
-    # 添加如下一行配置
-    ssh_args = ""</p>
+<p>需要在<code>ansible.cfg</code>配置文件中添加一行配置：   </p>
+<blockquote>
+<p>[ssh_connection]</p>
+<h1>添加如下一行配置</h1>
+<p>ssh_args = ""</p>
+</blockquote>
 	<hr />
       </div>
     </div>
